--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --primary: #7393B3;
+  --secondary: #325694;
+  --accent: #088F8F;
+  --background: #CFCFC3;
+  --text: #B0A8A7;
+  --highlight: #ADD8E6;
+}
+
 @font-face {
   font-family: 'Gilroy Bold';
   src: url('@/components/fonts/gilroy-bold.ttf') format('opentype');
